--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "bwareact": "git+https://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:x-oauth-basic@github.com/Abulkhaerisgn/react-one.git",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@svgr/webpack": "^6.5.1",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
